--- a/package.json
+++ b/package.json
@@ -1,45 +1,31 @@
 {
-  "name": "navbar",
-  "version": "0.1.0",
-  "private": true,
+  "name": "nfeng-navbar",
+  "version": "1.0.1",
+  "main": "dist/index.umd.js",
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "test:unit": "vue-cli-service test:unit --passWithNoTests",
-    "lint": "vue-cli-service lint"
+    "build": "NODE_ENV=production rollup -c",
+    "dev": "rollup -c -w"
   },
-  "dependencies": {
-    "ant-design-vue": "^1.7.6",
-    "core-js": "^3.4.4",
-    "single-spa-vue": "^1.5.2",
-    "systemjs-webpack-interop": "^1.1.0",
-    "vue": "^2.6.10",
-    "vue-router": "^3.1.3"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/N-feng/nfeng-navbar.git"
   },
+  "bugs": {
+    "url": "https://github.com/N-feng/nfeng-navbar/issues"
+  },
+  "homepage": "https://github.com/N-feng/nfeng-navbar#readme",
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^4.1.0",
-    "@vue/cli-plugin-eslint": "^4.1.0",
-    "@vue/cli-plugin-router": "^4.1.0",
-    "@vue/cli-plugin-unit-jest": "^4.1.0",
-    "@vue/cli-service": "^4.1.0",
-    "@vue/eslint-config-prettier": "^5.0.0",
-    "@vue/test-utils": "1.0.0-beta.29",
-    "babel-eslint": "^10.0.3",
-    "eslint": "^5.16.0",
-    "eslint-plugin-prettier": "^3.1.1",
-    "eslint-plugin-vue": "^5.0.0",
-    "lint-staged": "^9.5.0",
-    "prettier": "^1.19.1",
-    "vue-cli-plugin-single-spa": "^1.1.0",
-    "vue-template-compiler": "^2.6.10"
-  },
-  "gitHooks": {
-    "pre-commit": "lint-staged"
-  },
-  "lint-staged": {
-    "*.{js,vue}": [
-      "vue-cli-service lint",
-      "git add"
-    ]
+    "@babel/core": "^7.14.6",
+    "@babel/plugin-transform-runtime": "^7.14.5",
+    "@babel/preset-env": "^7.14.7",
+    "@rollup/plugin-babel": "^5.3.0",
+    "@rollup/plugin-commonjs": "^19.0.1",
+    "ant-design-vue": "^1.7.7",
+    "node-sass": "^6.0.1",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-postcss": "^4.0.0",
+    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-vue": "5.1.9",
+    "vue-template-compiler": "^2.6.14"
   }
 }
